--- a/DiplomT/src/Catalogs/ДоговорыКонтрагентов/Forms/ВКМ_ФормаОбъекта/Form.form
+++ b/DiplomT/src/Catalogs/ДоговорыКонтрагентов/Forms/ВКМ_ФормаОбъекта/Form.form
@@ -269,6 +269,10 @@
     <event>OnCreateAtServer</event>
     <name>ПриСозданииНаСервере</name>
   </handlers>
+  <handlers>
+    <event>OnOpen</event>
+    <name>ПриОткрытии</name>
+  </handlers>
   <windowOpeningMode>LockOwnerWindow</windowOpeningMode>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
